# video_detection

./: .gitignore  CMakeLists.txt  README.en.md  README.md  run.sh  start.sh
lib_json/src/lib_json/: Makefile
log4cplus/: CMakeLists.txt  log4cplus-2.0.8.7z  mylogger.cpp  mylogger.h
log4cplus/libx64/log4cplus/lib/: liblog4cplus-2.0.so.3  liblog4cplus.la  liblog4cplusU-2.0.so.3  liblog4cplusU.la
log4cplus/libx64/log4cplus/lib/pkgconfig/: log4cplus.pc
minIni/: CMakeLists.txt
src/: DecodeHK.cpp  DecodeHK.h  DecodeOpencv.cpp  DecodeOpencv.h  captureHK.cpp  captureHK.h  ffDecodecpu.cpp  ffDecodecpu.h  funobject.h  globale.h  main.cpp  myutils.cpp  myutils.h  threadPtr.cpp  threadPtr.h
src/DepthAnything/: depth_anything.cpp  depth_anything.h
src/ffdecode/: ffDecodecpu.cpp  ffDecodecpu.h
src/objdetection/: ApplyDepthAnything.cpp  ApplyDepthAnything.h  fyApplyYolov5.cpp  fyApplyYolov5.h  fyApplyYolov7.cpp  fyApplyYolov7.h  fyApplyYolov8.cpp  fyApplyYolov8.h  fyApplyYolov8Pose.cpp  fyApplyYolov8Pose.h  fyApplyYolov8Seg.cpp  fyApplyYolov8Seg.h  objdetection.cpp  objdetection.h  objdetection_manager.cpp  objdetection_manager.h  wxApplyYolov57.cpp  wxApplyYolov57.h  wxApplyYolov57seg.cpp  wxApplyYolov57seg.h
src/yolov5_v6/: calibrator.cpp  yololayer.h  yolov5_v6TRT.cpp  yolov5_v6TRT.h
src/yolov5_v7/: config.h  model.cpp  postprocess.cpp  yolov5_v7TRT.cpp  yolov5_v7TRT.h  yolov5_v7segTRT.cpp  yolov5_v7segTRT.h
src/yolov8/: decode_yolov8.h  yolov8.h
src/yolov8-pose/: decode_yolov8_pose.h  yolov8_pose.cpp  yolov8_pose.h
src/yolov8-seg/: decode_yolov8_seg.h  yolov8_seg.cpp  yolov8_seg.h
tensorRT/: CMakeLists.txt
tensorRT/cmake/: common.cmake
tensorRT/yolov8/: decode_yolov8.cu
tensorRT/yolov8-seg/: decode_yolov8_seg.cu
